# TalkHub

./: .gitignore  README.md  Singleton.h  const.h
ChatServer/: CMakeLists.txt  main.cpp
ChatServer/ChatGrpcClient/: ChatGrpcClient.cpp  ChatGrpcClient.h
ChatServer/ChatServer/: ChatServer.cpp  ChatServer.h
ChatServer/ChatServiceImpl/: ChatServiceImpl.cpp  ChatServiceImpl.h
ChatServer/MessageDispatcher/: MessageDispatcher.h
ChatServer/MessageHandler/: ApplytoAddFriendHandler.h  AuthFriendReqHandler.h  ChatTextMsgHandler.h  IMessageHandler.cpp  IMessageHandler.h  LoginHandler.h  SearchUserHandler.h
ChatServer/MessagePublisher/: MessagePublisher.h
ChatServer/UserMgr/: UserMgr.cpp  UserMgr.h
Client/: Client.pro  Singleton.h  adduseritem.ui  applyfriend.cpp  applyfriend.h  applyfriend.ui  applyfrienditem.cpp  applyfrienditem.h  applyfriendlist.cpp  applyfriendpage.cpp  applyfriendpage.h  bubbleframe.cpp  bubbleframe.h  chatdialog.cpp  chatdialog.h  chatdialog.ui  chatfrienditem.cpp  chatfrienditem.h  chatfrienditem.ui  chatitembase.cpp  chatitembase.h  chatpage.cpp  chatpage.h  chatpage.ui  chatuserlist.cpp  chatuserlist.h  chatuserwid.cpp  chatuserwid.h  chatuserwid.ui  chatview.cpp  chatview.h  chatwidget.cpp  chatwidget.h  chatwidget.ui  clickablelabel.cpp  clickablelabel.h  clickedbtn.cpp  clickedbtn.h  clickedoncelabel.cpp  clickedoncelabel.h  (+70 more)
Config/: ConfigMgr.cpp  ConfigMgr.h  config.ini
GateServer/: CMakeLists.txt  config.ini  const.h  main.cpp
GateServer/AsioIOServicePool/: AsioIOServicePool.cpp  AsioIOServicePool.h
GateServer/CServer/: CServer.cpp  CServer.h
GateServer/ConfigMgr/: ConfigMgr.cpp  ConfigMgr.h
GateServer/HttpConn/: HttpConn.cpp  HttpConn.h
GateServer/LogicSystem/: LogicSystem.cpp  LogicSystem.h
GateServer/MysqlMgr/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h
GateServer/RedisMgr/: RedisMgr.cpp  RedisMgr.h
GateServer/StatusGrpcClient/: StatusGrpcClient.cpp  StatusGrpcClient.h
GateServer/VerifyGrpcClient/: VerifyGrpcClient.h
GateServer/protoc/: message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
MysqlMgr/: MysqlDao.cpp  MysqlDao.h  MysqlMgr.cpp  MysqlMgr.h
RedisMgr/: RedisMgr.cpp  RedisMgr.h
StatusGrpcClient/: StatusGrpcClient.cpp  StatusGrpcClient.h
StatusServer/: CMakeLists.txt  StatusServer.cpp  StatusServiceImpl.cpp  StatusServiceImpl.h
StatusServer/protoc/: message.pb.cc  message.pb.h  message.proto
VerifyServer/: config.js  config.json  const.js  email.js  package-lock.json  package.json  redis.js  server.js
protoc/: message.grpc.pb.h  message.pb.cc  message.pb.h  message.proto
